--- a/test/default/Makefile.am
+++ b/test/default/Makefile.am
@@ -29,6 +29,7 @@ EXTRA_DIST = \
 	chacha20.exp \
 	codecs.exp \
 	core_ed25519.exp \
+	core_keccak1600.exp \
 	core_ristretto255.exp \
 	core1.exp \
 	core2.exp \
@@ -84,7 +85,11 @@ EXTRA_DIST = \
 	stream3.exp \
 	stream4.exp \
 	verify1.exp \
-	xchacha20.exp
+	xchacha20.exp \
+	xof_shake128.exp \
+	xof_shake256.exp \
+	xof_turboshake128.exp \
+	xof_turboshake256.exp
 
 DISTCLEANFILES = \
 	aead_aegis128l.res \
@@ -111,6 +116,7 @@ DISTCLEANFILES = \
 	chacha20.res \
 	codecs.res \
 	core_ed25519.res \
+	core_keccak1600.res \
 	core_ristretto255.res \
 	core1.res \
 	core2.res \
@@ -167,7 +173,11 @@ DISTCLEANFILES = \
 	stream3.res \
 	stream4.res \
 	verify1.res \
-	xchacha20.res
+	xchacha20.res \
+	xof_shake128.res \
+	xof_shake256.res \
+	xof_turboshake128.res \
+	xof_turboshake256.res
 
 AM_CPPFLAGS = \
 	-DTEST_SRCDIR=\"@srcdir@\" \
@@ -203,6 +213,7 @@ TESTS_TARGETS = \
 	box_seed \
 	chacha20 \
 	codecs \
+	core_keccak1600 \
 	core1 \
 	core2 \
 	core3 \
@@ -248,7 +259,11 @@ TESTS_TARGETS = \
 	stream2 \
 	stream3 \
 	stream4 \
-	verify1
+	verify1 \
+	xof_shake128 \
+	xof_shake256 \
+	xof_turboshake128 \
+	xof_turboshake256
 
 if !EMSCRIPTEN
 TESTS_TARGETS += \
@@ -334,6 +349,9 @@ codecs_LDADD              = $(TESTS_LDADD)
 
 core_ed25519_SOURCE       = cmptest.h core_ed25519.c
 core_ed25519_LDADD        = $(TESTS_LDADD)
+
+core_keccak1600_SOURCE    = cmptest.h core_keccak1600.c
+core_keccak1600_LDADD     = $(TESTS_LDADD)
 
 core_ristretto255_SOURCE  = cmptest.h core_ristretto255.c
 core_ristretto255_LDADD   = $(TESTS_LDADD)
@@ -502,6 +520,18 @@ verify1_LDADD             = $(TESTS_LDADD)
 
 xchacha20_SOURCE          = cmptest.h xchacha20.c
 xchacha20_LDADD           = $(TESTS_LDADD)
+
+xof_shake128_SOURCE       = cmptest.h xof_shake128.c
+xof_shake128_LDADD        = $(TESTS_LDADD)
+
+xof_shake256_SOURCE       = cmptest.h xof_shake256.c
+xof_shake256_LDADD        = $(TESTS_LDADD)
+
+xof_turboshake128_SOURCE  = cmptest.h xof_turboshake128.c
+xof_turboshake128_LDADD   = $(TESTS_LDADD)
+
+xof_turboshake256_SOURCE  = cmptest.h xof_turboshake256.c
+xof_turboshake256_LDADD   = $(TESTS_LDADD)
 
 if !MINIMAL
 TESTS_TARGETS += \
