--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,6 +155,36 @@ jobs:
           make -j $(nproc)
           make clean > /dev/null
 
+  wasi:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install Zig
+        uses: mlugg/setup-zig@v2
+        with:
+          version: master
+
+      - name: Install Wasmer
+        uses: wasmerio/setup-wasmer@v3.1
+
+      - name: Build for wasi-core
+        run: zig build -Dtarget=wasm32-wasi -Doptimize=ReleaseSafe
+
+      - name: Run tests with Wasmer
+        run: |
+          cd zig-out/bin
+          failed=0
+          for wasm in *.wasm; do
+            name="${wasm%.wasm}"
+            echo "[$name]"
+            if ! wasmer run "$wasm" --mapdir=./:.  2>&1; then
+              echo "*** [$name] FAILED" >&2
+              failed=1
+            fi
+          done
+          exit $failed
+
   android:
     runs-on: ubuntu-latest
     steps:
