--- a/src/libsodium/include/Makefile.in
+++ b/src/libsodium/include/Makefile.in
@@ -377,6 +377,7 @@ SODIUM_EXPORT = \
 	sodium/crypto_hash.h \
 	sodium/crypto_hash_sha256.h \
 	sodium/crypto_hash_sha512.h \
+	sodium/crypto_ipcrypt.h \
 	sodium/crypto_kdf.h \
 	sodium/crypto_kdf_hkdf_sha256.h \
 	sodium/crypto_kdf_hkdf_sha512.h \
