--- a/test/default/Makefile.in
+++ b/test/default/Makefile.in
@@ -148,15 +148,16 @@ am__EXEEXT_3 = aead_aegis128l$(EXEEXT) aead_aegis256$(EXEEXT) \
 	core3$(EXEEXT) core4$(EXEEXT) core5$(EXEEXT) core6$(EXEEXT) \
 	ed25519_convert$(EXEEXT) generichash$(EXEEXT) \
 	generichash2$(EXEEXT) generichash3$(EXEEXT) hash$(EXEEXT) \
-	hash3$(EXEEXT) kdf$(EXEEXT) keygen$(EXEEXT) kx$(EXEEXT) \
-	metamorphic$(EXEEXT) misuse$(EXEEXT) onetimeauth$(EXEEXT) \
-	onetimeauth2$(EXEEXT) onetimeauth7$(EXEEXT) \
-	pwhash_argon2i$(EXEEXT) pwhash_argon2id$(EXEEXT) \
-	randombytes$(EXEEXT) scalarmult$(EXEEXT) scalarmult2$(EXEEXT) \
-	scalarmult5$(EXEEXT) scalarmult6$(EXEEXT) scalarmult7$(EXEEXT) \
-	scalarmult8$(EXEEXT) secretbox$(EXEEXT) secretbox2$(EXEEXT) \
-	secretbox7$(EXEEXT) secretbox8$(EXEEXT) \
-	secretbox_easy$(EXEEXT) secretbox_easy2$(EXEEXT) \
+	hash3$(EXEEXT) ipcrypt$(EXEEXT) kdf$(EXEEXT) keygen$(EXEEXT) \
+	kx$(EXEEXT) metamorphic$(EXEEXT) misuse$(EXEEXT) \
+	onetimeauth$(EXEEXT) onetimeauth2$(EXEEXT) \
+	onetimeauth7$(EXEEXT) pwhash_argon2i$(EXEEXT) \
+	pwhash_argon2id$(EXEEXT) randombytes$(EXEEXT) \
+	scalarmult$(EXEEXT) scalarmult2$(EXEEXT) scalarmult5$(EXEEXT) \
+	scalarmult6$(EXEEXT) scalarmult7$(EXEEXT) scalarmult8$(EXEEXT) \
+	secretbox$(EXEEXT) secretbox2$(EXEEXT) secretbox7$(EXEEXT) \
+	secretbox8$(EXEEXT) secretbox_easy$(EXEEXT) \
+	secretbox_easy2$(EXEEXT) \
 	secretstream_xchacha20poly1305$(EXEEXT) shorthash$(EXEEXT) \
 	sign$(EXEEXT) sodium_core$(EXEEXT) sodium_utils$(EXEEXT) \
 	sodium_version$(EXEEXT) stream$(EXEEXT) stream2$(EXEEXT) \
@@ -282,6 +283,9 @@ hash_DEPENDENCIES = $(TESTS_LDADD)
 hash3_SOURCES = hash3.c
 hash3_OBJECTS = hash3.$(OBJEXT)
 hash3_DEPENDENCIES = $(TESTS_LDADD)
+ipcrypt_SOURCES = ipcrypt.c
+ipcrypt_OBJECTS = ipcrypt.$(OBJEXT)
+ipcrypt_DEPENDENCIES = $(TESTS_LDADD)
 kdf_SOURCES = kdf.c
 kdf_OBJECTS = kdf.$(OBJEXT)
 kdf_DEPENDENCIES = $(TESTS_LDADD)
@@ -458,7 +462,8 @@ am__depfiles_remade = ./$(DEPDIR)/aead_aegis128l.Po \
 	./$(DEPDIR)/core_ristretto255.Po \
 	./$(DEPDIR)/ed25519_convert.Po ./$(DEPDIR)/generichash.Po \
 	./$(DEPDIR)/generichash2.Po ./$(DEPDIR)/generichash3.Po \
-	./$(DEPDIR)/hash.Po ./$(DEPDIR)/hash3.Po ./$(DEPDIR)/kdf.Po \
+	./$(DEPDIR)/hash.Po ./$(DEPDIR)/hash3.Po \
+	./$(DEPDIR)/ipcrypt.Po ./$(DEPDIR)/kdf.Po \
 	./$(DEPDIR)/kdf_hkdf.Po ./$(DEPDIR)/keygen.Po \
 	./$(DEPDIR)/kx.Po ./$(DEPDIR)/metamorphic.Po \
 	./$(DEPDIR)/misuse.Po ./$(DEPDIR)/onetimeauth.Po \
@@ -511,19 +516,19 @@ SOURCES = aead_aegis128l.c aead_aegis256.c aead_aes256gcm.c \
 	codecs.c core1.c core2.c core3.c core4.c core5.c core6.c \
 	core_ed25519.c core_keccak1600.c core_ristretto255.c \
 	ed25519_convert.c generichash.c generichash2.c generichash3.c \
-	hash.c hash3.c kdf.c kdf_hkdf.c keygen.c kx.c metamorphic.c \
-	misuse.c onetimeauth.c onetimeauth2.c onetimeauth7.c \
-	pwhash_argon2i.c pwhash_argon2id.c pwhash_scrypt.c \
-	pwhash_scrypt_ll.c randombytes.c scalarmult.c scalarmult2.c \
-	scalarmult5.c scalarmult6.c scalarmult7.c scalarmult8.c \
-	scalarmult_ed25519.c scalarmult_ristretto255.c secretbox.c \
-	secretbox2.c secretbox7.c secretbox8.c secretbox_easy.c \
-	secretbox_easy2.c secretstream_xchacha20poly1305.c shorthash.c \
-	sign.c siphashx24.c sodium_core.c sodium_utils.c \
-	sodium_utils2.c sodium_utils3.c sodium_version.c stream.c \
-	stream2.c stream3.c stream4.c verify1.c xchacha20.c \
-	xof_shake128.c xof_shake256.c xof_turboshake128.c \
-	xof_turboshake256.c
+	hash.c hash3.c ipcrypt.c kdf.c kdf_hkdf.c keygen.c kx.c \
+	metamorphic.c misuse.c onetimeauth.c onetimeauth2.c \
+	onetimeauth7.c pwhash_argon2i.c pwhash_argon2id.c \
+	pwhash_scrypt.c pwhash_scrypt_ll.c randombytes.c scalarmult.c \
+	scalarmult2.c scalarmult5.c scalarmult6.c scalarmult7.c \
+	scalarmult8.c scalarmult_ed25519.c scalarmult_ristretto255.c \
+	secretbox.c secretbox2.c secretbox7.c secretbox8.c \
+	secretbox_easy.c secretbox_easy2.c \
+	secretstream_xchacha20poly1305.c shorthash.c sign.c \
+	siphashx24.c sodium_core.c sodium_utils.c sodium_utils2.c \
+	sodium_utils3.c sodium_version.c stream.c stream2.c stream3.c \
+	stream4.c verify1.c xchacha20.c xof_shake128.c xof_shake256.c \
+	xof_turboshake128.c xof_turboshake256.c
 DIST_SOURCES = aead_aegis128l.c aead_aegis256.c aead_aes256gcm.c \
 	aead_aes256gcm2.c aead_chacha20poly1305.c \
 	aead_chacha20poly13052.c aead_xchacha20poly1305.c auth.c \
@@ -532,19 +537,19 @@ DIST_SOURCES = aead_aegis128l.c aead_aegis256.c aead_aes256gcm.c \
 	codecs.c core1.c core2.c core3.c core4.c core5.c core6.c \
 	core_ed25519.c core_keccak1600.c core_ristretto255.c \
 	ed25519_convert.c generichash.c generichash2.c generichash3.c \
-	hash.c hash3.c kdf.c kdf_hkdf.c keygen.c kx.c metamorphic.c \
-	misuse.c onetimeauth.c onetimeauth2.c onetimeauth7.c \
-	pwhash_argon2i.c pwhash_argon2id.c pwhash_scrypt.c \
-	pwhash_scrypt_ll.c randombytes.c scalarmult.c scalarmult2.c \
-	scalarmult5.c scalarmult6.c scalarmult7.c scalarmult8.c \
-	scalarmult_ed25519.c scalarmult_ristretto255.c secretbox.c \
-	secretbox2.c secretbox7.c secretbox8.c secretbox_easy.c \
-	secretbox_easy2.c secretstream_xchacha20poly1305.c shorthash.c \
-	sign.c siphashx24.c sodium_core.c sodium_utils.c \
-	sodium_utils2.c sodium_utils3.c sodium_version.c stream.c \
-	stream2.c stream3.c stream4.c verify1.c xchacha20.c \
-	xof_shake128.c xof_shake256.c xof_turboshake128.c \
-	xof_turboshake256.c
+	hash.c hash3.c ipcrypt.c kdf.c kdf_hkdf.c keygen.c kx.c \
+	metamorphic.c misuse.c onetimeauth.c onetimeauth2.c \
+	onetimeauth7.c pwhash_argon2i.c pwhash_argon2id.c \
+	pwhash_scrypt.c pwhash_scrypt_ll.c randombytes.c scalarmult.c \
+	scalarmult2.c scalarmult5.c scalarmult6.c scalarmult7.c \
+	scalarmult8.c scalarmult_ed25519.c scalarmult_ristretto255.c \
+	secretbox.c secretbox2.c secretbox7.c secretbox8.c \
+	secretbox_easy.c secretbox_easy2.c \
+	secretstream_xchacha20poly1305.c shorthash.c sign.c \
+	siphashx24.c sodium_core.c sodium_utils.c sodium_utils2.c \
+	sodium_utils3.c sodium_version.c stream.c stream2.c stream3.c \
+	stream4.c verify1.c xchacha20.c xof_shake128.c xof_shake256.c \
+	xof_turboshake128.c xof_turboshake256.c
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -996,6 +1001,7 @@ EXTRA_DIST = \
 	generichash3.exp \
 	hash.exp \
 	hash3.exp \
+	ipcrypt.exp \
 	kdf.exp \
 	kdf_hkdf.exp \
 	keygen.exp \
@@ -1084,6 +1090,7 @@ DISTCLEANFILES = \
 	hash.res \
 	hash2.res \
 	hash3.res \
+	ipcrypt.res \
 	kdf.res \
 	kdf_hkdf.res \
 	keygen.res \
@@ -1147,7 +1154,7 @@ TESTS_TARGETS = aead_aegis128l aead_aegis256 aead_aes256gcm \
 	box2 box7 box8 box_easy box_easy2 box_seal box_seed chacha20 \
 	codecs core_keccak1600 core1 core2 core3 core4 core5 core6 \
 	ed25519_convert generichash generichash2 generichash3 hash \
-	hash3 kdf keygen kx metamorphic misuse onetimeauth \
+	hash3 ipcrypt kdf keygen kx metamorphic misuse onetimeauth \
 	onetimeauth2 onetimeauth7 pwhash_argon2i pwhash_argon2id \
 	randombytes scalarmult scalarmult2 scalarmult5 scalarmult6 \
 	scalarmult7 scalarmult8 secretbox secretbox2 secretbox7 \
@@ -1235,6 +1242,8 @@ hash_SOURCE = cmptest.h hash.c
 hash_LDADD = $(TESTS_LDADD)
 hash3_SOURCE = cmptest.h hash3.c
 hash3_LDADD = $(TESTS_LDADD)
+ipcrypt_SOURCE = cmptest.h ipcrypt.c
+ipcrypt_LDADD = $(TESTS_LDADD)
 kdf_SOURCE = cmptest.h kdf.c
 kdf_LDADD = $(TESTS_LDADD)
 kdf_hkdf_SOURCE = cmptest.h kdf_hkdf.c
@@ -1520,6 +1529,10 @@ hash3$(EXEEXT): $(hash3_OBJECTS) $(hash3_DEPENDENCIES) $(EXTRA_hash3_DEPENDENCIE
 	@rm -f hash3$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(hash3_OBJECTS) $(hash3_LDADD) $(LIBS)
 
+ipcrypt$(EXEEXT): $(ipcrypt_OBJECTS) $(ipcrypt_DEPENDENCIES) $(EXTRA_ipcrypt_DEPENDENCIES) 
+	@rm -f ipcrypt$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(ipcrypt_OBJECTS) $(ipcrypt_LDADD) $(LIBS)
+
 kdf$(EXEEXT): $(kdf_OBJECTS) $(kdf_DEPENDENCIES) $(EXTRA_kdf_DEPENDENCIES) 
 	@rm -f kdf$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(kdf_OBJECTS) $(kdf_LDADD) $(LIBS)
@@ -1752,6 +1765,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/generichash3.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hash.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hash3.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ipcrypt.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kdf.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kdf_hkdf.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/keygen.Po@am__quote@ # am--include-marker
@@ -2306,6 +2320,13 @@ hash3.log: hash3$(EXEEXT)
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
+ipcrypt.log: ipcrypt$(EXEEXT)
+	@p='ipcrypt$(EXEEXT)'; \
+	b='ipcrypt'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
 kdf.log: kdf$(EXEEXT)
 	@p='kdf$(EXEEXT)'; \
 	b='kdf'; \
@@ -2781,6 +2802,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/generichash3.Po
 	-rm -f ./$(DEPDIR)/hash.Po
 	-rm -f ./$(DEPDIR)/hash3.Po
+	-rm -f ./$(DEPDIR)/ipcrypt.Po
 	-rm -f ./$(DEPDIR)/kdf.Po
 	-rm -f ./$(DEPDIR)/kdf_hkdf.Po
 	-rm -f ./$(DEPDIR)/keygen.Po
@@ -2911,6 +2933,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/generichash3.Po
 	-rm -f ./$(DEPDIR)/hash.Po
 	-rm -f ./$(DEPDIR)/hash3.Po
+	-rm -f ./$(DEPDIR)/ipcrypt.Po
 	-rm -f ./$(DEPDIR)/kdf.Po
 	-rm -f ./$(DEPDIR)/kdf_hkdf.Po
 	-rm -f ./$(DEPDIR)/keygen.Po
